--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Kopieren Sie diese Datei zu .env und füllen Sie die Werte aus
 
 # Erforderlich: Die Live-Domain der Website
-NEXT_PUBLIC_SITE_URL=https://ipdomabau.de
+NEXT_PUBLIC_SITE_URL=https://ipdombabau.de
 
 # Optional: Google Tag Manager ID für Analytics
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
@@ -12,4 +12,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=ihre-email@gmail.com
 SMTP_PASS=ihr-app-passwort
-CONTACT_EMAIL=info@ipdomabau.de
+CONTACT_EMAIL=info@ipdombabau.de
